{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 15,
  "lineage": "cdc8d792-cd62-bec9-e5fc-c680ce53223f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a53e431bf24d798a",
            "arn": "arn:aws:ec2:us-east-1:654654554686:elastic-ip/eipalloc-0a53e431bf24d798a",
            "domain": "vpc",
            "id": "eipalloc-0a53e431bf24d798a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-237-134-15.compute-1.amazonaws.com",
            "public_ip": "34.237.134.15",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "devops-na-nuvem-week-vpc-nat-gateway-eip"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-week-vpc-nat-gateway-eip",
              "Project": "devops-na-nuvem-week"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654554686:internet-gateway/igw-05356513182ecedae",
            "id": "igw-05356513182ecedae",
            "owner_id": "654654554686",
            "tags": {
              "Name": "devops-na-nuvem-week-vpc-internet-gateway"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-week-vpc-internet-gateway",
              "Project": "devops-na-nuvem-week"
            },
            "vpc_id": "vpc-003ada2a1e7757b83"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a53e431bf24d798a",
            "association_id": "eipassoc-043114b5eab46a196",
            "connectivity_type": "public",
            "id": "nat-0b9fe2d4e7fd75c03",
            "network_interface_id": "eni-0db6453d778ae1241",
            "private_ip": "10.0.0.25",
            "public_ip": "34.237.134.15",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ac366c9c8928cc63",
            "tags": {
              "Name": "devops-na-nuvem-week-vpc-nat-gateway"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-week-vpc-nat-gateway",
              "Project": "devops-na-nuvem-week"
            }
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654554686:route-table/rtb-06793a12152160cc1",
            "id": "rtb-06793a12152160cc1",
            "owner_id": "654654554686",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b9fe2d4e7fd75c03",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-na-nuvem-week-vpc-private-route-table"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-week-vpc-private-route-table",
              "Project": "devops-na-nuvem-week"
            },
            "timeouts": null,
            "vpc_id": "vpc-003ada2a1e7757b83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654554686:route-table/rtb-09f8ff664f7d1717b",
            "id": "rtb-09f8ff664f7d1717b",
            "owner_id": "654654554686",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05356513182ecedae",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-na-nuvem-week-vpc-public-route-table"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-week-vpc-public-route-table",
              "Project": "devops-na-nuvem-week"
            },
            "timeouts": null,
            "vpc_id": "vpc-003ada2a1e7757b83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e575af124dee406f",
            "route_table_id": "rtb-06793a12152160cc1",
            "subnet_id": "subnet-03ebdfca8cf6cee5a"
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059ee1a6d1c00cd10",
            "route_table_id": "rtb-06793a12152160cc1",
            "subnet_id": "subnet-02c5cd869a6548226"
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0931830a8584ae51e",
            "route_table_id": "rtb-09f8ff664f7d1717b",
            "subnet_id": "subnet-0ac366c9c8928cc63"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1d636e4292dfc8a",
            "route_table_id": "rtb-09f8ff664f7d1717b",
            "subnet_id": "subnet-0a9d87ec5ad026896"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654554686:subnet/subnet-03ebdfca8cf6cee5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ebdfca8cf6cee5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654554686",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-na-nuvem-week-vpc-private-subnet-us-east-1a"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-week-vpc-private-subnet-us-east-1a",
              "Project": "devops-na-nuvem-week"
            },
            "vpc_id": "vpc-003ada2a1e7757b83"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654554686:subnet/subnet-02c5cd869a6548226",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c5cd869a6548226",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654554686",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-na-nuvem-week-vpc-private-subnet-us-east-1b"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-week-vpc-private-subnet-us-east-1b",
              "Project": "devops-na-nuvem-week"
            },
            "vpc_id": "vpc-003ada2a1e7757b83"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654554686:subnet/subnet-0ac366c9c8928cc63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac366c9c8928cc63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654554686",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-na-nuvem-week-vpc-public-subnet-us-east-1a"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-week-vpc-public-subnet-us-east-1a",
              "Project": "devops-na-nuvem-week"
            },
            "vpc_id": "vpc-003ada2a1e7757b83"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654554686:subnet/subnet-0a9d87ec5ad026896",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9d87ec5ad026896",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654554686",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-na-nuvem-week-vpc-public-subnet-us-east-1b"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-week-vpc-public-subnet-us-east-1b",
              "Project": "devops-na-nuvem-week"
            },
            "vpc_id": "vpc-003ada2a1e7757b83"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654554686:vpc/vpc-003ada2a1e7757b83",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0f36291e1eb9109e1",
            "default_route_table_id": "rtb-087937797fa3f2cd4",
            "default_security_group_id": "sg-0c64b9fb0c12f140f",
            "dhcp_options_id": "dopt-0f66840db750670cb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-003ada2a1e7757b83",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-087937797fa3f2cd4",
            "owner_id": "654654554686",
            "tags": {
              "Name": "devops-na-nuvem-week-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-week-vpc",
              "Project": "devops-na-nuvem-week"
            }
          }
        }
      ]
    }
  ]
}